# edabot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
edabot/: __init__.py  _chatlas.py  chat.py  execute.py  magic.py  to_html.py
edabot/prompts/: 01-databot.md
edabot/tests/: conftest.py  helpers.py  test_execute.py  test_to_html.py
edabot/tests/__snapshots__/: test_to_html.ambr
